
beta 3
======

- Added: ActiveRecordBase<T> - a generic form a ActiveRecordBase which relieves the need to re-write
  all the base static methods to hide the type parameter and cast the result. Generics do it for you.

- Added: ActiveRecordStarter.ExecuteSchemaFromFile(filename) as an alternative to CreateSchema. 

- Added: Support for composite keys - composite key class must be serializable and implement both Equals and GetHashCode.
  Not complete support, missing the NHibernate key-many-to-one element in the composite key.
  
- Added: Support for Lazy loading class using BelongsTo. Will throw if there is a non virtual property that
  also BelongsTo().

- Closed: (AR-24) ValidationException must contain the validation error messages

- Support for fields in addition to properties

- Added [Any], [Any.MetaValue] and [HasManyToAny] attributes.

- Small improvement on ActiveRecordModelBuilder (less intensive on IsDefined/GetCustomAttribute)

- IThreadScopeInfo introduced. Two implementations: ThreadScopeInfo and WebThreadScopeInfo. 
  ThreadScopeInfo is the default implementation. You can use WebThreadScopeInfo by simply using 
  isWeb="true" on the configuration node:
  
  <config isWeb="true">
    ..
  
  Or you can provide your own implementation specifying the full type name

  <config threadinfotype="my.threadinfotype, my.assembly">
    ..

  

beta 2
======

- Transaction support: lots of minor fixes

- Added support for map relations. 
  Necessary to specify Index and IndexType on the HasMany (or HasAndBelongsToMany)

- IsUnique validator fix
  

Version 0.0.1.5
===============
  
  Inner workings fully rewritten, better test cases coverage

  Added SlicedFindAll


Version 0.0.1.4
===============

  Implemented support for Joined Subclasses

  Implemented initial support for validations


Version 0.0.1.3
===============

  Applied patch from John Morales (support for idbags)


Version 0.0.1.2
===============
